--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ pathspec==0.8.1
 pyasn1==0.4.8
 python-dateutil==2.8.1
 python-dotenv==0.15.0
+pytz==2020.5
 PyYAML==5.3.1
 regex==2020.11.13
 requests==2.25.1
